@@ -29,6 +29,7 @@
 <a href=ref/pygame_mixer_music.html>mixer_music</a> ||<br>
 || <a href=ref/pygame_mouse.html>mouse</a> || 
 <a href=ref/pygame_movie.html>movie</a> || 
+<a href=ref/pygame_sndarray.html>sndarray</a> || 
 <a href=ref/pygame_surfarray.html>surfarray</a> || 
 <a href=ref/pygame_time.html>time</a> || 
 <a href=ref/pygame_transform.html>transform</a> ||<br>
@@ -243,6 +244,8 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_display.html#get_driver>pygame.display.get_driver</a> - get the current sdl video driver<br>
 <a href=ref/pygame_display.html#get_init>pygame.display.get_init</a> - get status of display module initialization<br>
 <a href=ref/pygame_display.html#get_surface>pygame.display.get_surface</a> - get current display surface<br>
+<a href=ref/pygame_display.html#gl_get_attribute>pygame.display.gl_get_attribute</a> - get special OPENGL attributes<br>
+<a href=ref/pygame_display.html#gl_set_attribute>pygame.display.gl_set_attribute</a> - set special OPENGL attributes<br>
 <a href=ref/pygame_display.html#iconify>pygame.display.iconify</a> - minimize the display window<br>
 <a href=ref/pygame_display.html#init>pygame.display.init</a> - initialize the display module<br>
 <a href=ref/pygame_display.html#list_modes>pygame.display.list_modes</a> - query all resolutions for requested mode<br>
@@ -331,6 +334,8 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_mouse.html#set_pos>pygame.mouse.set_pos</a> - moves the cursor position<br>
 <a href=ref/pygame_mouse.html#set_visible>pygame.mouse.set_visible</a> - show or hide the mouse cursor<br>
 <a href=ref/pygame_movie.html#Movie>pygame.movie.Movie</a> - load a new MPEG stream<br>
+<a href=ref/pygame_sndarray.html#array>pygame.sndarray.array</a> - get an array copied from a sound<br>
+<a href=ref/pygame_sndarray.html#samples>pygame.sndarray.samples</a> - get a reference to the sound samples<br>
 <a href=ref/pygame_sprite.html#Group.__len__>pygame.sprite.Group.__len__</a> -            number of sprites in group<br>
 <a href=ref/pygame_sprite.html#Group.__nonzero__>pygame.sprite.Group.__nonzero__</a> -            ask if group is empty<br>
 <a href=ref/pygame_sprite.html#Group.add>pygame.sprite.Group.add</a> -            add sprite to group<br>
